# ffi

./: .yarnrc.yml  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml  deny.toml
.cargo/: config.toml
.yarn/releases/: yarn-4.5.2.cjs
algo/: Cargo.toml
algo/src/: algo.rs  matrix.rs  vector.rs
node-binding/: .gitignore  Cargo.toml  index.js  package.json  tsconfig.json
node-binding/benchmark/: tsconfig.json
node-binding/src/: matrix.rs
python-binding/: Cargo.toml  pyproject.toml
python-binding/python/algo/: _lowlevel.cp313-win_amd64.pyd
python-binding/src/: hasher.rs  lib.rs
